[gd_scene load_steps=6 format=3 uid="uid://rvryrb260w8d"]

[ext_resource type="Script" uid="uid://c4d84ev6o6sfj" path="res://shop_menu/shop_menu.gd" id="1_d3ese"]
[ext_resource type="Texture2D" uid="uid://b0uedlomuu6bu" path="res://art/cursor.png" id="2_dl1a4"]
[ext_resource type="Theme" uid="uid://bytvsetogekp" path="res://Main Theme.tres" id="2_ihr8w"]
[ext_resource type="Script" uid="uid://3iejfr66bnvt" path="res://menu/cursor.gd" id="4_ihr8w"]
[ext_resource type="Texture2D" uid="uid://bdsb6f1m7527d" path="res://art/backgrounds/Blue.png" id="5_k0iiv"]

[node name="Shop_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3ese")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -35.5
offset_right = 150.0
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Shop_Text" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ihr8w")
bbcode_enabled = true
text = "[font_size=40]Shop[/font_size]"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ihr8w")
bbcode_enabled = true
text = "[font_size=25][/font_size]"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrades" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ihr8w")
bbcode_enabled = true
text = "[font_size=25]Upgrades[/font_size]"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="WidePowerUp" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy: Wide Power-up"

[node name="DoubleBallPowerUp" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Buy: Double Ball Power-up"

[node name="BuyInfo" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0.1, 0)
layout_mode = 2
theme = ExtResource("2_ihr8w")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(41, -37)
scale = Vector2(0.029, 0.029)
texture = ExtResource("2_dl1a4")
script = ExtResource("4_ihr8w")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.156863)
texture_repeat = 2
position = Vector2(960, 540)
texture = ExtResource("5_k0iiv")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 1080)

[connection signal="pressed" from="MarginContainer/VBoxContainer/WidePowerUp" to="." method="_on_buy_button_pressed" binds= ["wide"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/DoubleBallPowerUp" to="." method="_on_buy_button_pressed" binds= ["double_ball"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
